update rank + board + summoner APIs
